--- a/html/variables.html
+++ b/html/variables.html
@@ -2,8 +2,18 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <link rel="stylesheet" href="variables.scss"
     </head>
     <body>
-        <h1>Hello, world!</h1>
+        <ul>
+            <li>unordered item</li>
+            <li>unordered item</li>
+            <li>unordered item</li>
+        </ul>
+        <ol>
+            <li>unordered item</li>
+            <li>unordered item</li>
+            <li>unordered item</li>
+        </ol>
     </body>
 </html>
